[package]
name = "aspargus"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chksum-hash-md5 = "0.0.1"
ollama-rs = "0.1.9"
directories = "5.0.1"
anyhow = "1.0.82"
log = "0.4.21"
simple_logger = "5.0.0"
glob = "0.3.1"
tokio = { version = "1.37.0", features = ["full"] }
base64 = "0.22.0"
md5 = "0.7.0"
image = "0.25.1"
rayon = "1.10.0"
clap = { version = "4.5.4", features = ["cargo"] }
serde_json = "1.0.116"
serde = { version = "1.0.198", features = ["derive"] }
chrono = "0.4.38"
regex = "1.10.4"
