[package]
name = "aspargus"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chksum-hash-md5 = "0.0.1"
ollama-rs = "0.3.0"
directories = "6.0.0"
anyhow = "1.0.98"
log = "0.4.27"
simple_logger = "5.0.0"
glob = "0.3.2"
tokio = { version = "1.44.2", features = ["full"] }
base64 = "0.22.1"
md5 = "0.7.0"
image = "0.25.6"
rayon = "1.10.0"
clap = { version = "4.5.37", features = ["cargo"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.40"
regex = "1.11.1"
